# FHE-Codes-Generation

./: Ckks_groq.ipynb  Encrypted_Regression_Model_Presentation.pptx  Final_Encrypted_Regression_Presentation_with_Workflow.pptx  HW5.ipynb  Main_project.ipynb  README.md  test.py
Reference_mistral/: dotproduct.py  matrix multiplication.py
Reference_openrouter/: addition.py  convolution.py  matrix multiplication.py  multiplication.py
app working/: app.py  config.json
app_already_submitted/: app.py
app_already_submitted/weights/regression/: gbr_model.pkl
generated_tenseal_codes/neuralnetowrk copy/app/: config.json  model.pt  model_config.json  model_weights.json  yourSolution.cpp  yourSolution.h
groq/decoding/addition/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/decoding/convolution/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/decoding/dot product/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/decoding/matrix multiplication/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/decoding/multiplication/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/prompting/addition/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/prompting/convolution/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/prompting/dot product/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
groq/prompting/matrix multiplication/: sample_1.py  sample_2.py  sample_3.py  sample_4.py  sample_5.py
neuralnetowrk/app/: CMakeLists.txt  main.cpp  model_config.json  model_weights.json  preprocessing_params.json  yourSolution.cpp  yourSolution.h
reference_codes_grok/: addition.py  convolution.py  dot_product.py  matrix_mult.py  multiplication.py
(+255 files in other folders)
